gl31-master/src/test/deca/syntax/invalid/complet/bad_instanceof2.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 11 : Erreur, pas de type après 'instanceof'
//
// Historique:
//    cree le 24/01/2021
class A{}
{
    A a = new A();
    if(a instanceof){
        print("no");
    }
}
